// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test generator cases test getMWACases 1`] = `
[
  {
    "language": "js",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  {
    "language": "js",
    "packageManager": "npm",
    "solution": "mwa",
  },
  {
    "language": "ts",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  {
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "language": "js",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  {
    "language": "ts",
    "packageManager": "npm",
    "solution": "mwa",
  },
]
`;

exports[`test generator cases test getModuleCases 1`] = `
[
  {
    "language": "js",
    "packageManager": "yarn",
    "solution": "module",
  },
  {
    "language": "js",
    "packageManager": "npm",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "yarn",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "module",
  },
  {
    "language": "js",
    "packageManager": "pnpm",
    "solution": "module",
  },
  {
    "language": "ts",
    "packageManager": "npm",
    "solution": "module",
  },
]
`;

exports[`test generator cases test getModuleNewCases 1`] = `
[
  {
    "actionType": "function",
    "function": "tailwindcss",
  },
  {
    "actionType": "function",
    "function": "storybookV7",
  },
  {
    "actionType": "function",
    "function": "runtimeApi",
  },
  {
    "actionType": "function",
    "function": "module_doc",
  },
]
`;
